<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/display">
        <CheckBoxPreference
            android:key="@string/pref_splash_key"
            android:title="@string/splash_screen_title"
            android:summary="@string/splash_screen_summary"
            android:defaultValue="@bool/pref_splash_default" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sound">

        <CheckBoxPreference
            android:key="@string/pref_sound_effect_key"
            android:title="@string/sound_effect_title"
            android:summary="@string/sound_effect_summary"
            android:defaultValue="pref_sound_effect_default" />
        <CheckBoxPreference
            android:key="@string/pref_background_music_key"
            android:title="@string/background_music_title"
            android:summary="@string/background_music_summary"
            android:defaultValue="@bool/pref_background_music_default" />
    </PreferenceCategory>


</PreferenceScreen>