<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pagebkg">



    <ImageView
        android:id="@+id/homeLogo"
        android:layout_width="wrap_content"
        android:layout_height="276dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/game_logo" />

    <Button
        android:id="@+id/start"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/bgColor"
        android:text="@string/start_button"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/wordColor"/>

    <Button
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/bgColor"
        android:text="@string/setting_button"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/wordColor"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/bgColor"
        android:text="@string/exit_button"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/wordColor"/>

</LinearLayout>